tried to fix projectlink overflow

--- a/assets/css/projects.css
+++ b/assets/css/projects.css
@@ -28,7 +28,6 @@
 
 #projectlink {
   background: rgba(96, 96, 96, 0.3);
-  padding: 5px;
+  /*padding: 5px; */
   text-align: center;
-  overflow: auto;
 }
